--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=config_management
-spring.datasource.url=jdbc:mysql://localhost:3309/configuration_management
+spring.datasource.url=jdbc:mysql://localhost:3309/configuration_management?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
